<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/background_style2"
    tools:context=".ui.login.LoginActivity">

    <TextView
        style="@style/header_login_register"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_login"/>

    <androidx.cardview.widget.CardView
        style="@style/card_login_register"
        android:id="@+id/card_login"
        android:layout_height="550dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="-15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                style="@style/tv_label_input_text"
                android:id="@+id/email_login"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input_layout_enabled"
                android:id="@+id/text_email_layout_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_login"
                app:startIconDrawable="@drawable/email_icon">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/input_text"
                    android:id="@+id/email_login_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/tv_label_input_text"
                android:id="@+id/password_login"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_email_layout_login" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input_layout_enabled"
                android:id="@+id/text_password_layout_login"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_login"
                app:startIconDrawable="@drawable/password_icon">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/input_text"
                    android:id="@+id/password_login_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/button_login_loginpage"
                android:id="@+id/btn_login"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_password_layout_login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/normal_tv_nav"
                    android:id="@+id/dont_have_acc"
                    android:text="@string/dont_have_account" />

                <TextView
                    style="@style/bold_tv_nav"
                    android:id="@+id/register_navigation"
                    android:text="@string/register" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_login"
                style="?attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
