...
    <string name="too_many_request">Too many login requests, please try again later.</string>
    <string name="failed_update_login_again">Failed to update your profile, please login again</string>
    <string name="current_password_incorrect">Your current password is incorrect</string>
    <string name="delete_clothes">Delete Clothes</string>
    <string name="update_profil_failed">Update Profil Failed</string>
    <string name="try_again">Try Again</string>
    <string name="login_failed">Login Failed</string>
    <string name="classify_image_failed">Classify Image Failed</string>
    <string name="confirmation_delete">Are you sure want to delete this clothes ?</string>
    <string name="crop_image_failed">Crop Image Failed</string>
    <string name="register_failed">Register Failed</string>
    <string name="create_account_failed">Create Account Failed\n %1$s</string>
    <string name="yes">Yes</string>
...
